[package]
name = "actionkv"
version = "0.1.0"
authors = ["Jiayi Hu <jiayi.ghu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
crc = "1.8.1"
serde = { version = "1.0.114", features = ["derive"] }
bincode = "1.3.1"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"

[[bin]]
name = "akv_disk"
path = "src/akv_disk.rs"
