[package]
name = "clock"
version = "0.1.0"
authors = ["Jiayi Hu <jiayi.ghu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
clap = "2.33.2"
byteorder = "1.3.4"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.74"
