[package]
name = "dns-resolve"
version = "0.1.0"
authors = ["Jiayi Hu <jiayi.ghu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "2.33.2"

trust-dns = { version = "0.16", default-features = false }


