[package]
name = "botengine"
version = "0.1.0"
authors = ["Jiayi Hu <jiayi.ghu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
approx = "0.3.2"
nalgebra = "0.21.1"
rand = "0.7.3"
wasmtime = "0.34.2"
